Fixing z-index

--- a/frontend/src/Components/Logo/Logo.css
+++ b/frontend/src/Components/Logo/Logo.css
@@ -21,7 +21,7 @@
 
 @keyframes typing {
     from { width: 10% }
-    to { width: 90% }
+    to { width: 100% }
 }
 
 @keyframes blink-caret {
