--- a/frontend/src/Components/Registration/register-login.css
+++ b/frontend/src/Components/Registration/register-login.css
@@ -15,8 +15,9 @@
 }
 
 .container {
-    z-index: 1000;
+    z-index: 100;
     position: absolute;
+    width: max-content;
 }
 
   .header {
